update bib file with graphite references
also fix an error in the documentation

--- a/database/pgd_references.bib
+++ b/database/pgd_references.bib
@@ -29,6 +29,298 @@
   doi = {10.1111/j.1945-5100.2007.tb00563.x}
 }
 
+@article{Gra-1995-HOP-0,
+  title = {Isotopic Compositions of {{C}}, {{N}}, {{O}}, {{Mg}}, and {{Si}}, Trace Element Abundances, and Morphologies of Single Circumstellar Graphite Grains in Four Density Fractions from the {{Murchison}} Meteorite},
+  author = {Hoppe, Peter and Amari, Sachiko and Zinner, Ernst and Lewis, Roy S.},
+  year = {1995},
+  month = oct,
+  journal = {Geochimica et Cosmochimica Acta},
+  volume = {59},
+  number = {19},
+  pages = {4029--4056},
+  issn = {00167037},
+  doi = {10.1016/0016-7037(95)00280-D},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/001670379500280D},
+  urldate = {2024-07-10},
+  copyright = {https://www.elsevier.com/tdm/userlicense/1.0/},
+  langid = {english}
+}
+
+@article{Gra-1996-AMA-0,
+  title = {{\textsuperscript{41}}{{Ca}} in Presolar Graphite of Supernova Origin},
+  author = {Amari, Sachiko and Zinner, Ernst and Lewis, Roy S.},
+  year = {1996},
+  month = oct,
+  journal = {The Astrophysical Journal},
+  volume = {470},
+  number = {2},
+  pages = {L101-L104},
+  issn = {0004637X},
+  doi = {10.1086/310306},
+  url = {https://iopscience.iop.org/article/10.1086/310306},
+  urldate = {2024-07-10}
+}
+
+@article{Gra-1996-NIT-0,
+  title = {Extinct {\textsuperscript{44}}{{Ti}} in Presolar Graphite and {{SiC}}: {{Proof}} of a Supernova Origin},
+  shorttitle = {Extinct {\textsuperscript{44}} {{Ti}} in {{Presolar Graphite}} and {{SiC}}},
+  author = {Nittler, Larry R. and Amari, Sachiko and Zinner, Ernst and Woosley, S. E. and Lewis, Roy S.},
+  year = {1996},
+  month = may,
+  journal = {The Astrophysical Journal},
+  volume = {462},
+  number = {1},
+  pages = {L31-L34},
+  issn = {0004-637X, 1538-4357},
+  doi = {10.1088/1538-4357/462/1/L31},
+  url = {https://iopscience.iop.org/article/10.1088/1538-4357/462/1/L31},
+  urldate = {2024-07-10}
+}
+
+@article{Gra-1998-NIC-0,
+  title = {Zirconium and Molybdenum in {{Individual}} Circumstellar Graphite Grains: {{New}} Isotopic Data on the Nucleosynthesis of Heavy Elements},
+  shorttitle = {Zirconium and {{Molybdenum}} in {{Individual Circumstellar Graphite Grains}}},
+  author = {Nicolussi, Gunther K. and Pellin, Michael J. and Lewis, Roy S. and Davis, Andrew M. and Clayton, Robert N. and Amari, Sachiko},
+  year = {1998},
+  month = sep,
+  journal = {The Astrophysical Journal},
+  volume = {504},
+  number = {1},
+  pages = {492--499},
+  issn = {0004-637X, 1538-4357},
+  doi = {10.1086/306072},
+  url = {https://iopscience.iop.org/article/10.1086/306072},
+  urldate = {2024-07-10},
+  langid = {english}
+}
+
+@article{Gra-1999-TRA-0,
+  title = {Low-density Graphite Grains and Mixing in Type {{II}} Supernovae},
+  author = {Travaglio, Claudia and Gallino, Roberto and Amari, Sachiko and Zinner, Ernst and Woosley, Stan and Lewis, Roy S.},
+  year = {1999},
+  month = jan,
+  journal = {The Astrophysical Journal},
+  volume = {510},
+  number = {1},
+  pages = {325--354},
+  issn = {0004-637X, 1538-4357},
+  doi = {10.1086/306551},
+  url = {https://iopscience.iop.org/article/10.1086/306551},
+  urldate = {2024-07-10},
+  langid = {english}
+}
+
+@article{Gra-2003-CRO-0,
+  title = {Structural, Chemical, and Isotopic Microanalytical Investigations of Graphite from Supernovae},
+  author = {Croat, T.Kevin and Bernatowicz, Thomas and Amari, Sachiko and Messenger, Scott and Stadermann, Frank J},
+  year = {2003},
+  month = dec,
+  journal = {Geochimica et Cosmochimica Acta},
+  volume = {67},
+  number = {24},
+  pages = {4705--4725},
+  issn = {00167037},
+  doi = {10.1016/S0016-7037(03)00463-0},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S0016703703004630},
+  urldate = {2024-07-10},
+  copyright = {https://www.elsevier.com/tdm/userlicense/1.0/},
+  langid = {english}
+}
+
+@article{Gra-2008-JAD-0,
+  title = {New Stellar Sources for High-density, Presolar Graphite Grains},
+  author = {Jadhav, Manavi and Amari, Sachiko and Marhas, Kuljeet K. and Zinner, Ernst and Maruoka, Teruyuki and Gallino, Roberto},
+  year = {2008},
+  month = aug,
+  journal = {The Astrophysical Journal},
+  volume = {682},
+  number = {2},
+  pages = {1479--1485},
+  issn = {0004-637X, 1538-4357},
+  doi = {10.1086/589139},
+  url = {https://iopscience.iop.org/article/10.1086/589139},
+  urldate = {2024-07-10},
+  langid = {english}
+}
+
+@article{Gra-2009-HEC-0,
+  title = {Ne Isotopes in Individual Presolar Graphite Grains from the {{Murchison}} Meteorite Together with {{He}}, {{C}}, {{O}}, {{Mg-Al}} Isotopic Analyses as Tracers of Their Origins},
+  author = {Heck, Philipp R. and Amari, Sachiko and Hoppe, Peter and Baur, Heinrich and Lewis, Roy S. and Wieler, Rainer},
+  year = {2009},
+  month = aug,
+  journal = {The Astrophysical Journal},
+  volume = {701},
+  number = {2},
+  pages = {1415--1425},
+  issn = {0004-637X, 1538-4357},
+  doi = {10.1088/0004-637X/701/2/1415},
+  url = {https://iopscience.iop.org/article/10.1088/0004-637X/701/2/1415},
+  urldate = {2024-07-10}
+}
+
+@article{Gra-2012-GRO-0,
+  title = {C, {{N}}, and {{O}} Isotopic Heterogeneities in Low-Density Supernova Graphite Grains from {{Orgeuil}}},
+  author = {Groopman, Evan and Bernatowicz, Thomas and Zinner, Ernst},
+  year = {2012},
+  month = jul,
+  journal = {The Astrophysical Journal},
+  volume = {754},
+  number = {1},
+  pages = {L8},
+  issn = {2041-8205, 2041-8213},
+  doi = {10.1088/2041-8205/754/1/L8},
+  url = {https://iopscience.iop.org/article/10.1088/2041-8205/754/1/L8},
+  urldate = {2024-07-10}
+}
+
+@article{Gra-2012-MEI-0,
+  title = {Graphite Grains in Supernova Ejecta {\textendash} {{Insights}} from a Noble Gas Study of 91 Individual {{KFC1}} Presolar Graphite Grains from the {{Murchison}} Meteorite},
+  author = {Meier, M.M.M. and Heck, P.R. and Amari, S. and Baur, H. and Wieler, R.},
+  year = {2012},
+  month = jan,
+  journal = {Geochimica et Cosmochimica Acta},
+  volume = {76},
+  pages = {147--160},
+  issn = {00167037},
+  doi = {10.1016/j.gca.2011.10.027},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S0016703711006144},
+  urldate = {2024-07-10},
+  copyright = {https://www.elsevier.com/tdm/userlicense/1.0/},
+  langid = {english}
+}
+
+@article{Gra-2013-JAD-0,
+  title = {Multi-Element Isotopic Analyses of Presolar Graphite Grains from {{Orgueil}}},
+  author = {Jadhav, Manavi and Zinner, Ernst and Amari, Sachiko and Maruoka, Teruyuki and Marhas, Kuljeet K. and Gallino, Roberto},
+  year = {2013},
+  month = jul,
+  journal = {Geochimica et Cosmochimica Acta},
+  volume = {113},
+  pages = {193--224},
+  issn = {00167037},
+  doi = {10.1016/j.gca.2013.01.018},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S0016703713000409},
+  urldate = {2024-07-10},
+  copyright = {https://www.elsevier.com/tdm/userlicense/1.0/},
+  langid = {english}
+}
+
+@article{Gra-2014-AMA-0,
+  title = {Presolar Graphite from the {{Murchison}} Meteorite: {{An}} Isotopic Study},
+  shorttitle = {Presolar Graphite from the {{Murchison}} Meteorite},
+  author = {Amari, Sachiko and Zinner, Ernst and Gallino, Roberto},
+  year = {2014},
+  month = may,
+  journal = {Geochimica et Cosmochimica Acta},
+  volume = {133},
+  pages = {479--522},
+  issn = {00167037},
+  doi = {10.1016/j.gca.2014.01.006},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S0016703714000386},
+  urldate = {2024-07-10},
+  copyright = {https://www.elsevier.com/tdm/userlicense/1.0/},
+  langid = {english}
+}
+
+@article{Gra-2016-HAE-0,
+  title = {Coordinated Analysis of Two Graphite Grains from the {{CO3}}.0 {{LAP}} 031117 Meteorite: {{First}} Identification of a {{CO}} Nova Graphite and a Presolar Iron Sulfide Subgrain},
+  shorttitle = {{{COORDINATED ANALYSIS OF TWO GRAPHITE GRAINS FROM THE CO3}}.0 {{LAP}} 031117 {{METEORITE}}},
+  author = {Haenecour, Pierre and Floss, Christine and Jos{\'e}, Jordi and Amari, Sachiko and Lodders, Katharina and Jadhav, Manavi and Wang, Alian and Gyngard, Frank},
+  year = {2016},
+  month = jul,
+  journal = {The Astrophysical Journal},
+  volume = {825},
+  number = {2},
+  pages = {88},
+  issn = {0004-637X, 1538-4357},
+  doi = {10.3847/0004-637X/825/2/88},
+  url = {https://iopscience.iop.org/article/10.3847/0004-637X/825/2/88},
+  urldate = {2024-07-10},
+  abstract = {ABSTRACT                            Presolar grains constitute the remnants of stars that existed before the formation of the solar system. In addition to providing direct information on the materials from which the solar system formed, these grains provide ground-truth information for models of stellar evolution and nucleosynthesis. Here we report the in situ identification of two unique presolar graphite grains from the primitive meteorite LaPaz Icefield 031117. Based on these two graphite grains, we estimate a bulk presolar graphite abundance of                                                                                                                   ppm in this meteorite. One of the grains (LAP-141) is characterized by an enrichment in               12               C and depletions in               33,34               S, and contains a small iron sulfide subgrain, representing the first unambiguous identification of presolar iron sulfide. The other grain (LAP-149) is extremely               13               C-rich and               15               N-poor, with one of the lowest               12               C/               13               C ratios observed among presolar grains. Comparison of its isotopic compositions with new stellar nucleosynthesis and dust condensation models indicates an origin in the ejecta of a low-mass CO nova. Grain LAP-149 is the first putative nova grain that quantitatively best matches nova model predictions, providing the first strong evidence for graphite condensation in nova ejecta. Our discovery confirms that CO nova graphite and presolar iron sulfide contributed to the original building blocks of the solar system.}
+}
+
+@article{Gra-2018-HEC-0,
+  title = {Neon Isotopes in Individual Presolar Low-density Graphite Grains from the {{Orgueil}} Meteorite},
+  author = {Heck, Philipp R. and Jadhav, Manavi and Meier, Matthias M. M. and Maruoka, Teruyuki and Amari, Sachiko and Zinner, Ernst K. and Busemann, Henner and Maden, Colin and Gyngard, Frank and Baur, Heinrich and Wieler, Rainer},
+  year = {2018},
+  month = nov,
+  journal = {Meteoritics \& Planetary Science},
+  volume = {53},
+  number = {11},
+  pages = {2327--2342},
+  issn = {1086-9379, 1945-5100},
+  doi = {10.1111/maps.13129},
+  url = {https://onlinelibrary.wiley.com/doi/10.1111/maps.13129},
+  urldate = {2024-07-10},
+  abstract = {Abstract                            We present He and Ne isotopes of individual presolar graphite grains from a low-density separate from Orgueil. Two grain mounts were analyzed with the same techniques but in a different sequence: The first one was measured with Nano               SIMS               followed by noble gas mass spectrometry, and the second one in reverse order. No grain contained               4               He and only one grain on the second mount contained               3               He. On the first mount, the grains had been extensively sputtered with Nano               SIMS               ion beams prior to noble gas analysis; we found only one grain out of 15 with presolar               22               Ne above detection limit. In contrast, we found presolar               22               Ne in six out of seven grains on the second mount that was not exposed to an ion beam prior to noble gas analysis. All 22 grains on the two mounts were imaged with scanning electron microscopy (               SEM               ) and/or Auger microscopy. We present evidence that this contrasting observation is most likely due to e-beam{\textendash}induced heating of the generally smaller grains on the first mount during               SEM               and Auger imaging, and not primarily due to the Nano               SIMS               analysis. If thermal contact of the grains to the substrate is absent, such that heat can only be dissipated via radiation, then the smaller, sputter-eroded grains are heated to higher temperatures such that noble gases can diffuse out. We discuss possible gas loss mechanisms and suggest solutions to reduce heating during e-beam analyses by minimizing voltages, beam currents, and dwell times. We also found small amounts of               21               Ne in five grains. Using isotope data we determined that the dominant sources of most grains are core-collapse supernovae, congruent with earlier studies of low-density presolar graphite from Murchison. Only two of the grains are most likely from               AGB               stars, and two others have an ambiguous origin.},
+  langid = {english}
+}
+
+@article{Gra-2022-BAR-0,
+  title = {Presolar Stardust in Asteroid {{Ryugu}}},
+  author = {Barosch, Jens and Nittler, Larry R. and Wang, Jianhua and O'D. Alexander, Conel M. and De Gregorio, Bradley T. and Engrand, C{\'e}cile and Kebukawa, Yoko and Nagashima, Kazuhide and Stroud, Rhonda M. and Yabuta, Hikaru and Abe, Yoshinari and Al{\'e}on, J{\'e}r{\^o}me and Amari, Sachiko and Amelin, Yuri and Bajo, Ken-ichi and Bejach, Laure and Bizzarro, Martin and Bonal, Lydie and Bouvier, Audrey and Carlson, Richard W. and Chaussidon, Marc and Choi, Byeon-Gak and Cody, George D. and Dartois, Emmanuel and Dauphas, Nicolas and Davis, Andrew M. and Dazzi, Alexandre and {Deniset-Besseau}, Ariane and Di Rocco, Tommaso and Duprat, Jean and Fujiya, Wataru and Fukai, Ryota and Gautam, Ikshu and Haba, Makiko K. and Hashiguchi, Minako and Hibiya, Yuki and Hidaka, Hiroshi and Homma, Hisashi and Hoppe, Peter and Huss, Gary R. and Ichida, Kiyohiro and Iizuka, Tsuyoshi and Ireland, Trevor R. and Ishikawa, Akira and Ito, Motoo and Itoh, Shoichi and Kamide, Kanami and Kawasaki, Noriyuki and David Kilcoyne, A. L. and Kita, Noriko T. and Kitajima, Kouki and Kleine, Thorsten and Komatani, Shintaro and Komatsu, Mutsumi and Krot, Alexander N. and Liu, Ming-Chang and Martins, Zita and Masuda, Yuki and Mathurin, J{\'e}r{\'e}mie and McKeegan, Kevin D. and Montagnac, Gilles and Morita, Mayu and Mostefaoui, Smail and Motomura, Kazuko and Moynier, Fr{\'e}d{\'e}ric and Nakai, Izumi and Nguyen, Ann N. and Ohigashi, Takuji and Okumura, Taiga and Onose, Morihiko and Pack, Andreas and Park, Changkun and Piani, Laurette and Qin, Liping and Quirico, Eric and Remusat, Laurent and Russell, Sara S. and Sakamoto, Naoya and Sandford, Scott A. and Sch{\"o}nb{\"a}chler, Maria and Shigenaka, Miho and Suga, Hiroki and Tafla, Lauren and Takahashi, Yoshio and Takeichi, Yasuo and Tamenori, Yusuke and Tang, Haolan and Terada, Kentaro and Terada, Yasuko and Usui, Tomohiro and {Verdier-Paoletti}, Maximilien and Wada, Sohei and Wadhwa, Meenakshi and Wakabayashi, Daisuke and Walker, Richard J. and Yamashita, Katsuyuki and Yamashita, Shohei and Yin, Qing-Zhu and Yokoyama, Tetsuya and Yoneda, Shigekazu and Young, Edward D. and Yui, Hiroharu and Zhang, Ai-Cheng and Abe, Masanao and Miyazaki, Akiko and Nakato, Aiko and Nakazawa, Satoru and Nishimura, Masahiro and Okada, Tatsuaki and Saiki, Takanao and Tanaka, Satoshi and Terui, Fuyuto and Tsuda, Yuichi and Watanabe, Sei-ichiro and Yada, Toru and Yogata, Kasumi and Yoshikawa, Makoto and Nakamura, Tomoki and Naraoka, Hiroshi and Noguchi, Takaaki and Okazaki, Ryuji and Sakamoto, Kanako and Tachibana, Shogo and Yurimoto, Hisayoshi},
+  year = {2022},
+  month = aug,
+  journal = {The Astrophysical Journal Letters},
+  volume = {935},
+  number = {1},
+  pages = {L3},
+  issn = {2041-8205, 2041-8213},
+  doi = {10.3847/2041-8213/ac83bd},
+  url = {https://iopscience.iop.org/article/10.3847/2041-8213/ac83bd},
+  urldate = {2024-07-10},
+  abstract = {Abstract                            We have conducted a NanoSIMS-based search for presolar material in samples recently returned from C-type asteroid Ryugu as part of JAXA's Hayabusa2 mission. We report the detection of all major presolar grain types with O- and C-anomalous isotopic compositions typically identified in carbonaceous chondrite meteorites: 1 silicate, 1 oxide, 1 O-anomalous supernova grain of ambiguous phase, 38 SiC, and 16 carbonaceous grains. At least two of the carbonaceous grains are presolar graphites, whereas several grains with moderate C isotopic anomalies are probably organics. The presolar silicate was located in a clast with a less altered lithology than the typical extensively aqueously altered Ryugu matrix. The matrix-normalized presolar grain abundances in Ryugu are                                                                                                                                                    4.8                                                                 -                       2.6                                                                 +                       4.7                                                                                                        ppm for O-anomalous grains,                                                                                                                                                    25                                                                 -                       5                                                                 +                       6                                                                                                        ppm for SiC grains, and                                                                                                                                                    11                                                                 -                       3                                                                 +                       5                                                                                                        ppm for carbonaceous grains. Ryugu is isotopically and petrologically similar to carbonaceous Ivuna-type (CI) chondrites. To compare the in situ presolar grain abundances of Ryugu with CI chondrites, we also mapped Ivuna and Orgueil samples and found a total of 15 SiC grains and 6 carbonaceous grains. No O-anomalous grains were detected. The matrix-normalized presolar grain abundances in the CI chondrites are similar to those in Ryugu:                                                                                                                                                    23                                                                 -                       6                                                                 +                       7                                                                                                        ppm SiC and                                                                                                                                                    9.0                                                                 -                       3.6                                                                 +                       5.4                                                                                                        ppm carbonaceous grains. Thus, our results provide further evidence in support of the Ryugu{\textendash}CI connection. They also reveal intriguing hints of small-scale heterogeneities in the Ryugu samples, such as locally distinct degrees of alteration that allowed the preservation of delicate presolar material.}
+}
+
+@article{Gra-2022-BAR-1,
+  title = {Presolar {{O-}} and {{C-anomalous}} Grains in Unequilibrated Ordinary Chondrite Matrices},
+  author = {Barosch, Jens and Nittler, Larry R. and Wang, Jianhua and Dobric{\u a}, Elena and Brearley, Adrian J. and Hezel, Dominik C. and Alexander, Conel M. O'D.},
+  year = {2022},
+  month = oct,
+  journal = {Geochimica et Cosmochimica Acta},
+  volume = {335},
+  pages = {169--182},
+  issn = {00167037},
+  doi = {10.1016/j.gca.2022.08.027},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S0016703722004471},
+  urldate = {2024-07-10},
+  langid = {english}
+}
+
+@article{Gra-2022-ITO-0,
+  title = {A Pristine Record of Outer {{Solar System}} Materials from Asteroid {{Ryugu}}'s Returned Sample},
+  author = {Ito, Motoo and Tomioka, Naotaka and Uesugi, Masayuki and Yamaguchi, Akira and Shirai, Naoki and Ohigashi, Takuji and Liu, Ming-Chang and Greenwood, Richard C. and Kimura, Makoto and Imae, Naoya and Uesugi, Kentaro and Nakato, Aiko and Yogata, Kasumi and Yuzawa, Hayato and Kodama, Yu and Tsuchiyama, Akira and Yasutake, Masahiro and Findlay, Ross and Franchi, Ian A. and Malley, James A. and McCain, Kaitlyn A. and Matsuda, Nozomi and McKeegan, Kevin D. and Hirahara, Kaori and Takeuchi, Akihisa and Sekimoto, Shun and Sakurai, Ikuya and Okada, Ikuo and Karouji, Yuzuru and Arakawa, Masahiko and Fujii, Atsushi and Fujimoto, Masaki and Hayakawa, Masahiko and Hirata, Naoyuki and Hirata, Naru and Honda, Rie and Honda, Chikatoshi and Hosoda, Satoshi and Iijima, Yu-ichi and Ikeda, Hitoshi and Ishiguro, Masateru and Ishihara, Yoshiaki and Iwata, Takahiro and Kawahara, Kosuke and Kikuchi, Shota and Kitazato, Kohei and Matsumoto, Koji and Matsuoka, Moe and Michikami, Tatsuhiro and Mimasu, Yuya and Miura, Akira and Mori, Osamu and Morota, Tomokatsu and Nakazawa, Satoru and Namiki, Noriyuki and Noda, Hirotomo and Noguchi, Rina and Ogawa, Naoko and Ogawa, Kazunori and Okada, Tatsuaki and Okamoto, Chisato and Ono, Go and Ozaki, Masanobu and Saiki, Takanao and Sakatani, Naoya and Sawada, Hirotaka and Senshu, Hiroki and Shimaki, Yuri and Shirai, Kei and Sugita, Seiji and Takei, Yuto and Takeuchi, Hiroshi and Tanaka, Satoshi and Tatsumi, Eri and Terui, Fuyuto and Tsukizaki, Ryudo and Wada, Koji and Yamada, Manabu and Yamada, Tetsuya and Yamamoto, Yukio and Yano, Hajime and Yokota, Yasuhiro and Yoshihara, Keisuke and Yoshikawa, Makoto and Yoshikawa, Kent and Fukai, Ryota and Furuya, Shizuho and Hatakeda, Kentaro and Hayashi, Tasuku and Hitomi, Yuya and Kumagai, Kazuya and Miyazaki, Akiko and Nishimura, Masahiro and Soejima, Hiromichi and Iwamae, Ayako and Yamamoto, Daiki and Yoshitake, Miwa and Yada, Toru and Abe, Masanao and Usui, Tomohiro and Watanabe, Sei-ichiro and Tsuda, Yuichi},
+  year = {2022},
+  month = aug,
+  journal = {Nature Astronomy},
+  volume = {6},
+  number = {10},
+  pages = {1163--1171},
+  issn = {2397-3366},
+  doi = {10.1038/s41550-022-01745-5},
+  url = {https://www.nature.com/articles/s41550-022-01745-5},
+  urldate = {2024-07-10},
+  abstract = {Abstract             Volatile and organic-rich C-type asteroids may have been one of the main sources of Earth's water. Our best insight into their chemistry is currently provided by carbonaceous chondritic meteorites, but the meteorite record is biased: only the strongest types survive atmospheric entry and are then modified by interaction with the terrestrial environment. Here we present the results of a detailed bulk and microanalytical study of pristine Ryugu particles, brought to Earth by the Hayabusa2 spacecraft. Ryugu particles display a close compositional match with the chemically unfractionated, but aqueously altered, CI (Ivuna-type) chondrites, which are widely used as a proxy for the bulk Solar System composition. The sample shows an intricate spatial relationship between aliphatic-rich organics and phyllosilicates and indicates maximum temperatures of {\textasciitilde}30\,{\textdegree}C during aqueous alteration. We find that heavy hydrogen and nitrogen abundances are consistent with an outer Solar System origin. Ryugu particles are the most uncontaminated and unfractionated extraterrestrial materials studied so far, and provide the best available match to the bulk Solar System composition.},
+  langid = {english}
+}
+
+@article{Gra-2023-NGU-0,
+  title = {Abundant Presolar Grains and Primordial Organics Preserved in Carbon-Rich Exogenous Clasts in Asteroid {{Ryugu}}},
+  author = {Nguyen, Ann N. and Mane, Prajkta and Keller, Lindsay P. and Piani, Laurette and Abe, Yoshinari and Al{\'e}on, J{\'e}r{\^o}me and Alexander, Conel M. O'D. and Amari, Sachiko and Amelin, Yuri and Bajo, Ken-ichi and Bizzarro, Martin and Bouvier, Audrey and Carlson, Richard W. and Chaussidon, Marc and Choi, Byeon-Gak and Dauphas, Nicolas and Davis, Andrew M. and Di Rocco, Tommaso and Fujiya, Wataru and Fukai, Ryota and Gautam, Ikshu and Haba, Makiko K. and Hibiya, Yuki and Hidaka, Hiroshi and Homma, Hisashi and Hoppe, Peter and Huss, Gary R. and Ichida, Kiyohiro and Iizuka, Tsuyoshi and Ireland, Trevor R. and Ishikawa, Akira and Itoh, Shoichi and Kawasaki, Noriyuki and Kita, Noriko T. and Kitajima, Kouki and Kleine, Thorsten and Komatani, Shintaro and Krot, Alexander N. and Liu, Ming-Chang and Masuda, Yuki and McKeegan, Kevin D. and Morita, Mayu and Motomura, Kazuko and Moynier, Fr{\'e}d{\'e}ric and Nakai, Izumi and Nagashima, Kazuhide and Nesvorn{\'y}, David and Nittler, Larry and Onose, Morihiko and Pack, Andreas and Park, Changkun and Qin, Liping and Russell, Sara S. and Sakamoto, Naoya and Sch{\"o}nb{\"a}chler, Maria and Tafla, Lauren and Tang, Haolan and Terada, Kentaro and Terada, Yasuko and Usui, Tomohiro and Wada, Sohei and Wadhwa, Meenakshi and Walker, Richard J. and Yamashita, Katsuyuki and Yin, Qing-Zhu and Yokoyama, Tetsuya and Yoneda, Shigekazu and Young, Edward D. and Yui, Hiroharu and Zhang, Ai-Cheng and Nakamura, Tomoki and Naraoka, Hiroshi and Noguchi, Takaaki and Okazaki, Ryuji and Sakamoto, Kanako and Yabuta, Hikaru and Abe, Masanao and Miyazaki, Akiko and Nakato, Aiko and Nishimura, Masahiro and Okada, Tatsuaki and Yada, Toru and Yogata, Kasumi and Nakazawa, Satoru and Saiki, Takanao and Tanaka, Satoshi and Terui, Fuyuto and Tsuda, Yuichi and Watanabe, Sei-ichiro and Yoshikawa, Makoto and Tachibana, Shogo and Yurimoto, Hisayoshi},
+  year = {2023},
+  month = jul,
+  journal = {Science Advances},
+  volume = {9},
+  number = {28},
+  pages = {eadh1003},
+  issn = {2375-2548},
+  doi = {10.1126/sciadv.adh1003},
+  url = {https://www.science.org/doi/10.1126/sciadv.adh1003},
+  urldate = {2024-07-10},
+  abstract = {Preliminary analyses of asteroid Ryugu samples show kinship to aqueously altered CI (Ivuna-type) chondrites, suggesting similar origins. We report identification of C-rich, particularly primitive clasts in Ryugu samples that contain preserved presolar silicate grains and exceptional abundances of presolar SiC and isotopically anomalous organic matter. The high presolar silicate abundance (104 ppm) indicates that the clast escaped extensive alteration. The 5 to 10 times higher abundances of presolar SiC ({\textasciitilde}235 ppm), N-rich organic matter, organics with N isotopic anomalies (1.2\%), and organics with C isotopic anomalies (0.2\%) in the primitive clasts compared to bulk Ryugu suggest that the clasts formed in a unique part of the protoplanetary disk enriched in presolar materials. These clasts likely represent previously unsampled outer solar system material that accreted onto Ryugu after aqueous alteration ceased, consistent with Ryugu's rubble pile origin.           ,              Exogenic primitive clasts in Ryugu samples have remarkable abundances of presolar grains and isotopically anomalous organics.},
+  langid = {english}
+}
+
 @inproceedings{gyngardLithiumBoronSulphur2007,
   title = {Lithium, {{Boron}}, and {{Sulphur Isotopic Ratios}} in {{Large Presolar SiC Grains}} from {{Murchison}}},
   booktitle = {Lunar and {{Planetary Science Conference}}},
