add graphite db and update all required files

--- a/database/pgd_references.bib
+++ b/database/pgd_references.bib
@@ -44,6 +44,24 @@
   langid = {english}
 }
 
+@article{Gra-1995-ZIN-0,
+  title = {Interstellar Graphite in Meteorites: {{Isotopic}} Compositions and Structural Properties of Single Graphite Grains from {{Murchison}}},
+  shorttitle = {Interstellar Graphite in Meteorites},
+  author = {Zinner, Ernst and Amari, Sachiko and Wopenka, Brigitte and Lewis, Roy S.},
+  year = {1995},
+  month = mar,
+  journal = {Meteoritics},
+  volume = {30},
+  number = {2},
+  pages = {209--226},
+  issn = {0026-1114},
+  doi = {10.1111/j.1945-5100.1995.tb01115.x},
+  urldate = {2025-03-26},
+  abstract = {Abstract---               One hundred forty-three carbon grains, ranging in size from 2 to 8 {$\mu$}m, from two chemical and physical separates from the Murchison CM2 chondrite, were analyzed by ion microprobe mass spectrometry for their C- and N-isotopic compositions. Both separates are enriched in the exotic noble gas component Ne-E(L). Ninety grains were also analyzed for their H and O contents and 118, for Si. Thirteen grains were analyzed by micro-sampling laser Raman spectroscopy.                                         Round grains have large C-isotopic anomalies with               12               C/               13               C ratios ranging from 7 to 4500 (terrestrial ratio = 89). Nitrogen in these grains is also anomalous but shows much smaller deviations from the terrestrial composition,               14               N/               15               N ratios ranging from 193 to 680 (terrestrial ratio = 272). Spherulitic aggregates and non-round compact grains have normal C-isotopic ratios but               15               N excesses (up to 35\%). Raman spectra of the analyzed grains indicate varying degrees of crystalline disorder of graphite with estimated in-plane crystallite dimensions varying from 18 {\AA} (highly disordered, similar to terrestrial kerogen) to {$\sim$}750 {\AA} (well-crystallized graphite). Element contents of H, O, and Si are correlated with one another, and H and O are probably present in the form of organic molecules. On the basis of morphology, the round grains fall into two groups: grains with smooth, shell-like surfaces (``onions'') and grains that appear to be dense aggregates of small scales (``cauliflowers''). ``Onions'' tend to have lower trace element contents, isotopically light C (               12               C/               13               C {$>$} 89) and a high degree of crystalline order, whereas ``cauliflowers'' have a larger spread in trace element contents and C-isotopic ratios (they range from isotopically light to heavy) but tend to have a low degree of crystalline order. However, these differences exist only on average, and no clear distinction can be made for individual grains.                                         A few limited conclusions can be drawn about the astrophysical origin of the carbon grains of this study. The               15               N excesses in spherulitic aggregates and non-round grains can be explained as the result of ion-molecule reactions in molecular clouds. The round grains, on the other hand, must have formed in stellar atmospheres (circumstellar grains). Grains with isotopically light C must have formed in stellar environments characterized by He-burning, either in the atmosphere of Wolf-Rayet stars during the WC phase or in the He-burning,               12               C-rich zone of a massive star, ejected by a supernova explosion. Isotopically heavy C is produced by H-burning in the CNO cycle. Possible sources for grains with heavy C are carbon stars (AGB stars during the thermally pulsing phase) or novae, but the detailed distribution of               12               C/               13               C ratios agree neither with the distribution observed in carbon stars nor with theoretical predictions for these two types of stellar sources.},
+  copyright = {http://onlinelibrary.wiley.com/termsAndConditions\#vor},
+  langid = {english}
+}
+
 @article{Gra-1996-AMA-0,
   title = {{\textsuperscript{41}}{{Ca}} in Presolar Graphite of Supernova Origin},
   author = {Amari, Sachiko and Zinner, Ernst and Lewis, Roy S.},
@@ -149,6 +167,20 @@
   urldate = {2024-07-10}
 }
 
+@article{Gra-2010-CRO-0,
+  title = {Unusual {\textsuperscript{29,30}}{{Si-rich SiCs}} of Massive Star Origin Found within Graphites from the {{Murchison}} Meteorite},
+  author = {Croat, T. K. and Stadermann, F. J. and Bernatowicz, T. J.},
+  year = {2010},
+  month = jun,
+  journal = {The Astronomical Journal},
+  volume = {139},
+  number = {6},
+  pages = {2159--2169},
+  issn = {0004-6256, 1538-3881},
+  doi = {10.1088/0004-6256/139/6/2159},
+  urldate = {2025-03-26}
+}
+
 @article{Gra-2012-GRO-0,
   title = {C, {{N}}, and {{O}} Isotopic Heterogeneities in Low-Density Supernova Graphite Grains from {{Orgeuil}}},
   author = {Groopman, Evan and Bernatowicz, Thomas and Zinner, Ernst},
@@ -193,6 +225,22 @@
   langid = {english}
 }
 
+@article{Gra-2013-WOP-0,
+  title = {Murchison Presolar Carbon Grains of Different Density Fractions: {{A Raman}} Spectroscopic Perspective},
+  shorttitle = {Murchison Presolar Carbon Grains of Different Density Fractions},
+  author = {Wopenka, B. and Xu, Y.C. and Zinner, E. and Amari, S.},
+  year = {2013},
+  month = apr,
+  journal = {Geochimica et Cosmochimica Acta},
+  volume = {106},
+  pages = {463--489},
+  issn = {00167037},
+  doi = {10.1016/j.gca.2012.12.022},
+  urldate = {2025-03-26},
+  copyright = {https://www.elsevier.com/tdm/userlicense/1.0/},
+  langid = {english}
+}
+
 @article{Gra-2014-AMA-0,
   title = {Presolar Graphite from the {{Murchison}} Meteorite: {{An}} Isotopic Study},
   shorttitle = {Presolar Graphite from the {{Murchison}} Meteorite},
@@ -209,6 +257,15 @@
   langid = {english}
 }
 
+@article{Gra-2015-GRO-0,
+  title = {Correlated {{NanoSIMS}}, {{TEM}}, and {{XANES Studies}} of {{Presolar Grains}}},
+  author = {Groopman, Evan Edward},
+  year = {2015},
+  publisher = {Washington University in St. Louis},
+  doi = {10.7936/K7P26W8R},
+  urldate = {2025-03-26}
+}
+
 @article{Gra-2016-HAE-0,
   title = {Coordinated Analysis of Two Graphite Grains from the {{CO3}}.0 {{LAP}} 031117 Meteorite: {{First}} Identification of a {{CO}} Nova Graphite and a Presolar Iron Sulfide Subgrain},
   shorttitle = {{{COORDINATED ANALYSIS OF TWO GRAPHITE GRAINS FROM THE CO3}}.0 {{LAP}} 031117 {{METEORITE}}},
@@ -223,6 +280,35 @@
   doi = {10.3847/0004-637X/825/2/88},
   urldate = {2024-07-10},
   abstract = {ABSTRACT                            Presolar grains constitute the remnants of stars that existed before the formation of the solar system. In addition to providing direct information on the materials from which the solar system formed, these grains provide ground-truth information for models of stellar evolution and nucleosynthesis. Here we report the in situ identification of two unique presolar graphite grains from the primitive meteorite LaPaz Icefield 031117. Based on these two graphite grains, we estimate a bulk presolar graphite abundance of                                                                                                                   ppm in this meteorite. One of the grains (LAP-141) is characterized by an enrichment in               12               C and depletions in               33,34               S, and contains a small iron sulfide subgrain, representing the first unambiguous identification of presolar iron sulfide. The other grain (LAP-149) is extremely               13               C-rich and               15               N-poor, with one of the lowest               12               C/               13               C ratios observed among presolar grains. Comparison of its isotopic compositions with new stellar nucleosynthesis and dust condensation models indicates an origin in the ejecta of a low-mass CO nova. Grain LAP-149 is the first putative nova grain that quantitatively best matches nova model predictions, providing the first strong evidence for graphite condensation in nova ejecta. Our discovery confirms that CO nova graphite and presolar iron sulfide contributed to the original building blocks of the solar system.}
+}
+
+@article{Gra-2016-XUY-0,
+  title = {The First Discovery of Presolar Graphite Grains from the Highly Reducing {{Qingzhen}} ({{EH3}}) Meteorite},
+  author = {Xu, Yuchen and Lin, Yangting and Zhang, Jianchao and Hao, Jialong},
+  year = {2016},
+  month = jul,
+  journal = {The Astrophysical Journal},
+  volume = {825},
+  number = {2},
+  pages = {111},
+  issn = {0004-637X, 1538-4357},
+  doi = {10.3847/0004-637X/825/2/111},
+  urldate = {2025-03-26},
+  abstract = {ABSTRACT                            Presolar graphite grains have been extensively studied, but are limited in carbonaceous chondrites, particularly in Murchison (CM2) and Orgueil (CI1), which sampled materials from the oxidizing regions in the solar nebula. Here, we report the first discovery of presolar graphite grains from the Qingzhen (EH3) enstatite chondrite which formed under a highly reducing condition. Eighteen presolar graphite grains were identified by C-isotope mapping of the low-density fraction (1.75--1.85 g cm               -3               ) from Qingzhen acid residue. Another 58 graphite spherules were found in different areas of the same sample mount using a scanning electron microscope and were classified into three morphologies, including cauliflower, onion, and cauliflower--onion. The Raman spectra of these spherules vary from ordered, disordered, and glassy to kerogen-like, suggestive of a wide range of thermal metamorphisms. NanoSIMS analysis of the C- and Si-isotopes of these graphite spherules confirmed 23 presolar grains. The other 35 graphite spherules have no significant isotopic anomalies, but they share similar morphologies and Raman spectra with the presolar ones. Another three grains were identified during NanoSIMS analysis. Of all the 44 presolar graphite grains identified, six grains show               28               Si-excesses, suggestive of supernovae origins, and four grains are               12               C- and               29,30               Si-rich, consistent with low-metallicity asymptotic giant branch star origins. Another two graphite spherules have extremely low               12               C/               13               C ratios with marginal solar Si-isotopes. The morphologies, Raman spectra, and C- and Si-isotopic distributions of the presolar graphite grains from the Qingzhen enstatite chondrite are similar to those of the low-density fractions from Murchison carbonaceous chondrites. This study suggests a homogeneous distribution of presolar graphite grains in the solar nebula.}
+}
+
+@article{Gra-2018-GRO-0,
+  title = {Correlated {{XANES}}, {{TEM}}, and {{NanoSIMS}} of Presolar Graphite Grains},
+  author = {Groopman, Evan E. and Nittler, Larry R.},
+  year = {2018},
+  month = jan,
+  journal = {Geochimica et Cosmochimica Acta},
+  volume = {221},
+  pages = {219--236},
+  issn = {00167037},
+  doi = {10.1016/j.gca.2017.02.011},
+  urldate = {2025-03-26},
+  langid = {english}
 }
 
 @article{Gra-2018-HEC-0,
